spec/e2e/number/trailing_dot.lit
# error: [line 3] Error at end: I was expecting a property name after '.'.
123.
